--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "parse_headers",
-  "version": "1.0.0",
-  "description": "FCC Header parser",
-  "main": "index.js",
-  "author": "nopestack",
-  "license": "MIT",
-  "private": true,
-  "dependencies": {
-    "express": "^4.16.4"
-  }
+    "name": "parse_headers",
+    "version": "1.0.0",
+    "description": "FCC Header parser",
+    "main": "index.js",
+    "author": "nopestack",
+    "license": "MIT",
+    "private": true,
+    "dependencies": {
+        "express": "^4.16.4"
+    },
+    "scripts": {
+        "start": "node index.js"
+    }
 }
